--- a/css/styles.css
+++ b/css/styles.css
@@ -49,6 +49,7 @@
   .header {
     border-bottom: 1px solid #e7e9fc;
     height: 72px;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
   }
   .header-container {
     display: flex;
@@ -88,6 +89,21 @@
     letter-spacing: 0.02em;
     padding: 24px 0;
   }
+  .first-li{
+    position: relative;
+    color: #404bbf;
+  }
+  .first-li ::after{
+    content: '';
+    width: 100%;
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    height: 4px;
+    background-color: #404bbf;
+    border-radius: 2px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
   .nav-link:hover {
     color: #404bbf;
   }
@@ -100,6 +116,7 @@
   .address-list {
     display: flex;
     gap: 40px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1)
   }
   .address-list-item {
     font-size: 16px;
