--- a/css/styles.css
+++ b/css/styles.css
@@ -138,6 +138,10 @@
   .first-section {
     background-color: #2e2f42;
     padding: 188px 0;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/background.jpg);
+    /* max-width: 1440px; */
+    background-repeat: no-repeat;
+    background-size: cover;
   }
   .first-section-title {
     font-size: 56px;
@@ -169,6 +173,7 @@
     background-color: #4d5ae5;
     border-radius: 4px;
     cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   .btn:hover {
     background-color: #404bbf;
@@ -224,6 +229,7 @@
     background-color: #ffffff;
     width: calc((100%-72px) / 4);
     border-radius: 0px 0px 4px 4px;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   }
   .team-card {
     padding: 32px 0;
@@ -235,11 +241,76 @@
   .team-card-text {
     text-align: center;
   }
+  .div-class-svg{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #f4f4fd;
+    border-radius: 4px;
+    border: 1px solid #8e8f99;
+    margin-bottom: 8px;
+  }
+  .svg-class-icon{
+    width: 64;
+    height: 64;
+  }
+  .social-media{
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+  }
+  .social-media-class{
+    width: 40px;
+    height: 40px;
+  }
+  .social-media-a{
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .social-media-a:hover,
+  .social-media-a:focus{
+    background-color: #404bbf;
+  }
+  .social-media-svg{
+    width: 16;
+    height: 16;
+    fill: #f4f4fd
+  }
 
   /* FOURTH SECTION */
   .fourth-section {
     padding-top: 120px;
     padding-bottom: 120px;
+  }
+  .fourth-sect-div{
+    position: relative;
+    overflow: hidden; 
+  }
+  .fourth-sect-p{
+    position: absolute;
+    top: 0;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    padding: 40px 32px;
+    background-color: #4d5ae5;
+    height: 100%;
+    width: 100%;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .fourth-section-list-item{
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .fourth-section-list-item:hover p{
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   .fourth-section-title {
     margin-bottom: 72px;
@@ -276,4 +347,43 @@
   }
   .footer-logo-span {
     color: #f4f4fd;
+  }
+  .footer-container{
+    display: flex;
+    align-items: baseline;
+  }
+  .footer-div{
+    margin-right: 120px;
+  }
+  .footer-p-sm{
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #FFFFFF;
+    margin-bottom: 16px;
+  }
+  .footer-ul{
+    display: flex;
+    gap: 16px; 
+  }
+  .footer-li-a{
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .footer-li-a:hover,
+  .footer-li-a:focus{
+    background-color: #31d0aa
+  }
+  ul li a svg{
+    width: 24;
+    height: 24;
+  }
+  .footer-svg{
+    fill: #f4f4fd;
   }
