--- a/css/styles.css
+++ b/css/styles.css
@@ -89,7 +89,7 @@
     letter-spacing: 0.02em;
     padding: 24px 0;
   }
-  .first-li{
+  .first-li-a{
     position: relative;
     color: #404bbf;
   }
@@ -371,10 +371,13 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
-  .footer-li-a:hover,
-  .footer-li-a:focus{
-    background-color: #31d0aa
+  .footer-li-a:hover{
+    background-color: #31d0aa;
+  }
+  .footer-li-a:focus {
+    background-color: #31d0aa;
   }
   .footer-svg{
     fill: #f4f4fd;
