--- a/css/styles.css
+++ b/css/styles.css
@@ -303,6 +303,7 @@
     height: 100%;
     width: 100%;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transform: translateY(100%);
   }
   .fourth-section-list-item{
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
@@ -378,10 +379,10 @@
     justify-content: center;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
-  .footer-li-a:hover{
+  .footer-li-a :hover{
     background-color: #31d0aa;
   }
-  .footer-li-a:focus {
+  .footer-li-a :focus {
     background-color: #31d0aa;
   }
   .footer-svg{
